application/kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  labels:
    name: gateway
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api(/|$)(.*)
        backend:
          service:
            name: backend
            port: 
              number: 51001
      - pathType: Prefix
        path: /web(/|$)(.*)
        backend:
          service:
            name: frontend
            port: 
              number: 51002
